fixed some cleric domains

--- a/confessor.html
+++ b/confessor.html
@@ -61,29 +61,29 @@
         </div>
         
         <div class="class-promotion"><h2>Promotions</h2></div>
-        <div class="class-promotion-text1"><a href="#cutthroat">Cutthroat</a></div>
-        <div class="class-promotion-text2"><a href="#vandal">Vandal</a></div>
-        <div class="class-promotion-text3"><a href="#blackguard">Blackguard</a></div>
+        <div class="class-promotion-text1"><a href="#fanatic">Fanatic</a></div>
+        <div class="class-promotion-text2"><a href="#inquisitor">Inquisitor</a></div>
+        <div class="class-promotion-text3"><a href="#sanctifier">Sanctifier</a></div>
         <div class="class-domains"><h2>Domains</h2></div>
         <div class="class-domains-text1">
             <ul>
-                <li><a href="#">Death</a></li>
-                <li><a href="#">Plague</a></li>
-                <li><a href="#">Shadow</a></li>
+                <li><a href="#">Justice</a></li>
+                <li><a href="#">Fire</a></li>
+                <li><a href="#">Music</a></li>
             </ul>
         </div>    
         <div class="class-domains-text2">
             <ul>
-                <li><a href="#">Plague</a></li>
-                <li><a href="#">Shadow</a></li>
-                <li><a href="#">Wind</a></li>
+                <li><a href="#">Light</a></li>
+                <li><a href="#">Fire</a></li>
+                <li><a href="#">Storm</a></li>
             </ul>
         </div>             
         <div class="class-domains-text3">
             <ul>
-                <li><a href="#">Death</a></li>
-                <li><a href="#">Plague</a></li>
-                <li><a href="#">War</a></li>
+                <li><a href="#">Music</a></li>
+                <li><a href="#">Fire</a></li>
+                <li><a href="#">Protection</a></li>
             </ul>
         </div> 
     </div>
@@ -94,14 +94,64 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Flash Of Light</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Cleric_FlashOfLight.png">
+                    <h2 id="absolution">Absolution</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Conf_Absolution.png">
                 </div>                           
             </div>
             <div class="class-powers-cooldown-info">
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>30 S</div>
+                    <div>9 S</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
+                    <div>Ray</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
+                    <div>Instant</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Duration.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
+                    <div>132</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
+                    <div>25 M</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
+                    <div></div>
+                </div>
+            </div>    
+                <p class="info">Absolves an enemy causing 195 Fire damage. Absolution damage scales
+                    to as much as 444 damage based on the amount of Sin and consumes the Sin in the proces.
+                    <br><br>Absolution slows if five stacks of Sin are on the target.
+                </p>        
+        </div>
+        <div class="container-class-powers">        
+            <div class="header-class-powers">
+                <div>
+                    <h2 id="fire-bolt">Fire Bolt</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Disc_Redemption.png">
+                </div>                           
+            </div>
+            <div class="class-powers-cooldown-info">
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
+                    <div>15 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Lifetime.png">
@@ -120,62 +170,120 @@
                     <div>Instant</div>
                 </div>
                 <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Duration.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div>90</div>
+                    <div>96</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Range.png">
-                    <div>20 M</div>
+                    <div>25 M</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Restore.png">
                     <div></div>
                 </div>
             </div>    
-                <p class="info">Manifests divine lght from your shield blinding your reticle target and inflicting
-                    151 damage.</p>        
+                <p class="info">Shoots the target with a Fire Bolt, causing 144 damage and applying 2 Sin
+                    to your target. This can be Flash-Cast</p>        
         </div>
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="backstab">Holy Symbol</h2>            
-                    <img src="images/Powers/Icon_Powers_Graphic_Cleric_HolySymbol.png">
+                    <h2 id="fervor">Fervor</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Conf_Fervor.png">
                 </div>                           
             </div>
             <div class="class-powers-cooldown-info">
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cooldown.png">
-                    <div>20 S</div>
+                    <div>45 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Lifetime.png">
-                    <div>15</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
-                    <div>5</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Target.png">
-                    <div>Area</div>
+                    <div>Self</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_CastTime.png">
-                    <div>Ground Aimed</div>
+                    <div>Channeled</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Duration.png">
+                    <div>5 S</div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Cost.png">
-                    <div>90</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Range.png">
-                    <div>20 M</div>
+                    <div></div>
                 </div>
                 <div class="cooldown-img">
                     <img src="images/UI_PowerAttributeIcon_Restore.png">
                     <div></div>
                 </div>
             </div>    
-                <p class="info">Manifests divine lght from your shield blinding your reticle target and inflicting
-                    151 damage.</p>        
+                <p class="info">Restores 130 Mana every second for 5 seconds and reduce your physical
+                    mitigations by 15% while channeling.
+                </p>        
+        </div>
+        <div class="container-class-powers">        
+            <div class="header-class-powers">
+                <div>
+                    <h2 id="condemnation">Condemnation</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Conf_Condemnation.png">
+                </div>                           
+            </div>
+            <div class="class-powers-cooldown-info">
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
+                    <div>9 S</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
+                    <div>3</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
+                    <div>Rectangle</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
+                    <div>Hold Channeled</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Duration.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
+                    <div>Mana</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
+                    <div>7 M</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
+                    <div></div>
+                </div>
+            </div>    
+                <p class="info">Condemns enemies in front of you, dealing 71 damage repeatedly. Damage scales 
+                    to as much as 123 damage based on the target's level of Sin.
+                </p>        
         </div>
