--- a/cleric.html
+++ b/cleric.html
@@ -70,29 +70,29 @@
         </div>
         
         <div class="class-promotion"><h2>Promotions</h2></div>
-        <div class="class-promotion-text1"><a href="#cutthroat">Cutthroat</a></div>
-        <div class="class-promotion-text2"><a href="#vandal">Vandal</a></div>
-        <div class="class-promotion-text3"><a href="#blackguard">Blackguard</a></div>
+        <div class="class-promotion-text1"><a href="#radical">Radical</a></div>
+        <div class="class-promotion-text2"><a href="#arbiter">Arbiter</a></div>
+        <div class="class-promotion-text3"><a href="#crusader">Crusader</a></div>
         <div class="class-domains"><h2>Domains</h2></div>
         <div class="class-domains-text1">
             <ul>
-                <li><a href="#">Death</a></li>
-                <li><a href="#">Plague</a></li>
-                <li><a href="#">Shadow</a></li>
+                <li><a href="#">Fire</a></li>
+                <li><a href="#">Light</a></li>
+                <li><a href="#">Storm</a></li>
             </ul>
         </div>    
         <div class="class-domains-text2">
             <ul>
-                <li><a href="#">Plague</a></li>
-                <li><a href="#">Shadow</a></li>
+                <li><a href="#">Nature</a></li>
+                <li><a href="#">Light</a></li>
                 <li><a href="#">Wind</a></li>
             </ul>
         </div>             
         <div class="class-domains-text3">
             <ul>
-                <li><a href="#">Death</a></li>
-                <li><a href="#">Plague</a></li>
-                <li><a href="#">War</a></li>
+                <li><a href="#">Justice</a></li>
+                <li><a href="#">Light</a></li>
+                <li><a href="#">Protection</a></li>
             </ul>
         </div> 
     </div>
