--- a/champion.html
+++ b/champion.html
@@ -380,7 +380,7 @@
         <div class="container-class-powers">        
             <div class="header-class-powers">
                 <div>
-                    <h2 id="throw-hurlbat"></h2>Throw Hurlbat</h2>            
+                    <h2 id="throw-hurlbat">Throw Hurlbat</h2>            
                     <img src="images/Powers/Icon_Powers_Graphic_Chmp_ThrowHurlbat.png">
                 </div>                           
             </div>
@@ -1598,7 +1598,7 @@
         <div class="container-major">        
             <div class="header-major">
                 <div>
-                    <h2 id="careless-whisper">Stay In The Fight</h2>            
+                    <h2 id="stay-in-the-fight">Stay In The Fight</h2>            
                     <img src="images/Discipline/Minor/Icon_Disc_Minor_StayInTheFight.png">
                 </div>
                 <div>
