Confessor powers added

--- a/cleric.html
+++ b/cleric.html
@@ -1381,7 +1381,7 @@
                 <div>
                     <h3>Throw Illusion Shield</h3>
                     <img src="images/Powers/Icon_Powers_Graphic_Disc_IllusiaryShield.png">                        
-                    <p>Throws an illusion shield at your target for 114 damage, snares the target and causes
+                    <p>Throws an illusion shield at your target for 114 damage, roots the target and causes
                         it to richochet off to two additional targets.<br><br>Damage is reduced by 30% per
                         each ricochet up to a maximum of a 60% reduction. 
                     </p>                           
