assassin bug fix

--- a/assassin.html
+++ b/assassin.html
@@ -146,35 +146,35 @@
             </div>
             <div class="class-powers-cooldown-info">
                 <div class="cooldown-img">
-                    <img src="images/attribute icons/UI_PowerAttributeIcon_Cooldown.png">
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
                     <div></div>
                 </div>
                 <div class="cooldown-img">
-                    <img src="images/attribute icons/UI_PowerAttributeIcon_Lifetime.png">
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
                     <div></div>
                 </div>
                 <div class="cooldown-img">
-                    <img src="images/attribute icons/UI_PowerAttributeIcon_MaxTargets.png">
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
                     <div>1</div>
                 </div>
                 <div class="cooldown-img">
-                    <img src="images/attribute icons/UI_PowerAttributeIcon_Target.png">
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
                     <div>Self</div>
                 </div>
                 <div class="cooldown-img">
-                    <img src="images/attribute icons/UI_PowerAttributeIcon_CastTime.png">
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
                     <div>Instant</div>
                 </div>
                 <div class="cooldown-img">
-                    <img src="images/attribute icons/UI_PowerAttributeIcon_Cost.png">
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
                     <div>Pips</div>
                 </div>
                 <div class="cooldown-img">
-                    <img src="images/attribute icons/UI_PowerAttributeIcon_Range.png">
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
                     <div></div>
                 </div>
                 <div class="cooldown-img">
-                    <img src="images/attribute icons/UI_PowerAttributeIcon_Restore.png">
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
                     <div></div>
                 </div>
             </div>                    
