Added Druid powers

--- a/assassin.html
+++ b/assassin.html
@@ -689,6 +689,62 @@
                     This power can be used while mounted and dismounts you.
                 </p>        
         </div>
+        <div class="container-class-powers">        
+            <div class="header-class-powers">
+                <div>
+                    <h2 id="shadowstep">Shadowstep</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Assn_Shadowstep.png">
+                </div>                           
+            </div>
+            <div class="class-powers-cooldown-info">
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
+                    <div>5 S</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
+                    <div>5</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_AreaSize.png">
+                    <div>5 M</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
+                    <div>Self</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
+                    <div>Instant</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Duration.png">
+                    <div>5 S</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
+                    <div>500 Soul Power</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
+                    <div></div>
+                </div>
+            </div>    
+                <p class="info">Retreats you into the shadows, Blinking forward a short distance, 
+                    entering stealth and Blinding nearby enemies. This reduces damage taken and 
+                    grants immunity to control effects for 5 seconds.<br><br>Expose statuses, Stealth
+                    Blockers, and Damage over time effects are removed. This power can be used while suffering
+                    from Control Effects to escape and can be intantly Flash-Cast.
+                </p>        
+        </div>
     </section>
 
     <h1 class="sub-header" id="cutthroat">Promotion Class Cutthroat</h1>
