--- a/champion.html
+++ b/champion.html
@@ -1011,7 +1011,61 @@
                     generating 11 rage. You may perform a second Leap immidiately.          
                 </p>        
         </div>
-    
+        <div class="container-class-powers">        
+            <div class="header-class-powers">
+                <div>
+                    <h2 id="neckbreaker">Neckbreaker</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Chmp_FlyingNeckbreaker.png">
+                </div>                           
+            </div>
+            <div class="class-powers-cooldown-info">
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
+                    <div>1 S</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
+                    <div>5</div>
+                </div>
+                
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
+                    <div>Sphere</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
+                    <div>Instant</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Duration.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
+                    <div>500 Soul Power</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_AreaSize.png">
+                    <div>6 M</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
+                    <div></div>
+                </div>
+            </div>    
+                <p class="info">Deals 366 Crushing damage to all enemies in the area.<br><br>Briefly reduces 
+                    damage taken and removes Expose statuses. This power can be used while suffering
+                    from Control Effects to escape and can be intantly Flash-Cast.
+                </p>        
+        </div>
     </section>
 
     <h1 class="sub-header" id="alpha-warrior">Promotion Alpha Warrior</h1>
