--- a/cleric.html
+++ b/cleric.html
@@ -731,6 +731,120 @@
                     from hostile sources while blocking.
                 </p>        
         </div>
+        <div class="container-class-powers">        
+            <div class="header-class-powers">
+                <div>
+                    <h2 id="miracle">Miracle</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Cleric_Miracle.png">
+                </div>                           
+            </div>
+            <div class="class-powers-cooldown-info">
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
+                    <div>5 S</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_AreaSize.png">
+                    <div>50 M</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
+                    <div>Group</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
+                    <div>Instant</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Duration.png">
+                    <div>15 S</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
+                    <div>1000 Soul Power</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
+                    <div></div>
+                </div>
+            </div>    
+                <p class="info">Heals group members and you instantly for 322 healing, increasing
+                    their Critical Strike by 5% for 15 seconds and restoring some of your
+                    own Mana.<br><br>Briefly reduces 
+                    damage taken and removes Expose statuses. This power can be used while suffering
+                    from Control Effects to escape and can be intantly Flash-Cast.
+                </p>        
+        </div>
+        <div class="container-class-powers">        
+            <div class="header-class-powers">
+                <div>
+                    <h2 id="divine-order">Divine Order</h2>            
+                    <img src="images/Powers/Icon_Powers_Graphic_Cleric_DivineOrder.png">
+                </div>                           
+            </div>
+            <div class="class-powers-cooldown-info">
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cooldown.png">
+                    <div>30 S</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Lifetime.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_MaxTargets.png">
+                    <div>5</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_AreaSize.png">
+                    <div></div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Target.png">
+                    <div>Area</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_CastTime.png">
+                    <div>Instant</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Duration.png">
+                    <div>30 S</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Cost.png">
+                    <div>1000 Soul Power</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Range.png">
+                    <div>5 M</div>
+                </div>
+                <div class="cooldown-img">
+                    <img src="images/UI_PowerAttributeIcon_Restore.png">
+                    <div></div>
+                </div>
+            </div>    
+                <p class="info">Issues a holy decree instantly restoring some mana and increasing
+                    the base damage of both Basic Attacks and Searing Light by 90. Enemies are
+                    pushed away and take 195 Holy Damage.<br><br>Your Basic Attacks chain up to four
+                    additional times to strike nearby enemies. An enemy struck with a Basic Attack 
+                    may be stunned but this effect only occurs once every nine seconds.<br><br>Briefly reduces 
+                    damage taken and removes Expose statuses. This power can be used while suffering
+                    from Control Effects to escape and can be intantly Flash-Cast.
+                </p>        
+        </div>
 </section>
 
 <h1 class="sub-header" id="radical">Promotion Radical</h1>
