updated some major and minors

--- a/cleric.html
+++ b/cleric.html
@@ -54,18 +54,18 @@
         <div class="class-disciplines"><h2>Class Disciplines</h2></div>
         <div class="class-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            Arcane Archer<br>
-            Fencer<br>
-            Marster of Daggers<br>
-            Master of Swords<br>
-            Sharpshooter<br>
+            Adjudicator<br>
+            Lazarus' Disciple<br>
+            Marster of Maces<br>
+            Rune Caster<br>
+            Shield Fighter<br>
             Siege Engineer<br>
-            Waylayer<br>
+            Stalwart<br>
             <h3><a href="#minors">Minors</a></h3>
-            Archery<br>
-            Careless Whisper<br>
-            Sparring<br>
-            Spirit Whip<br>
+            Blessed Symbol<br>
+            God's Reach<br>
+            Illusory Shield<br>
+            Stay In The Fight<br>
             Thornshield 
         </div>
         
