--- a/confessor.html
+++ b/confessor.html
@@ -45,19 +45,17 @@
         <div class="class-disciplines"><h2>Class Disciplines</h2></div>
         <div class="class-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            Arcane Archer<br>
-            Fencer<br>
-            Marster of Daggers<br>
-            Master of Swords<br>
-            Sharpshooter<br>
-            Siege Engineer<br>
-            Waylayer<br>
+            Arkon's Disciple<br>
+            Cloisterer<br>
+            Convictor<br>
+            Redeemer<br>            
+            Siege Engineer<br>            
             <h3><a href="#minors">Minors</a></h3>
-            Archery<br>
-            Careless Whisper<br>
-            Sparring<br>
-            Spirit Whip<br>
-            Thornshield 
+            Reaper<br>
+            Spreading Flame<br>
+            Stay In The Fight<br>            
+            Thornshield<br>
+            Weapon Finesse 
         </div>
         
         <div class="class-promotion"><h2>Promotions</h2></div>
