--- a/druid.html
+++ b/druid.html
@@ -45,18 +45,17 @@
         <div class="class-disciplines"><h2>Class Disciplines</h2></div>
         <div class="class-disciplines-text">
             <h3><a href="#majors">Majors</a></h3>
-            Arcane Archer<br>
-            Fencer<br>
-            Marster of Daggers<br>
-            Master of Swords<br>
-            Sharpshooter<br>
+            Blitzer<br>
+            Kinetic Bloomer<br>
+            Nature's Guardian<br>
+            Shield Fighter<br>
             Siege Engineer<br>
-            Waylayer<br>
+            Spirit Seeker<br>            
             <h3><a href="#minors">Minors</a></h3>
-            Archery<br>
-            Careless Whisper<br>
-            Sparring<br>
-            Spirit Whip<br>
+            Illusory Shield<br>
+            Resurrection<br>
+            Stay In The Fight<br>
+            Supreme Element<br>
             Thornshield 
         </div>
         
