--- a/assassin.html
+++ b/assassin.html
@@ -50,7 +50,7 @@
             <h3><a href="#majors">Majors</a></h3>
             Arcane Archer<br>
             Fencer<br>
-            Marster of Daggers<br>
+            Master of Daggers<br>
             Master of Swords<br>
             Sharpshooter<br>
             Siege Engineer<br>
