changed index styling

--- a/index.html
+++ b/index.html
@@ -10,49 +10,38 @@
     <title>Crowfall Powers Index</title>
 </head>
 <body>   
-    <div class="index-class">
-        <h1>Assassin</h1>
-        <div><a href="assassin.html" target="_blank"><img src="images/Class/UI_ClassOutline_Assassin.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Assassin</h1><a href="assassin.html" target="_blank"><img src="images/Class/UI_ClassOutline_Assassin.png" width="250rem" height="250rem"></a></div>
     </div>
-    <div class="index-class">
-        <h1>Champion</h1>
-        <div><a href="champion.html" target="_blank"><img src="images/Class/UI_ClassOutline_Champion.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Champion</h1><a href="champion.html" target="_blank"><img src="images/Class/UI_ClassOutline_Champion.png" width="250rem" height="250rem"></a></div>
     </div>
-    <div class="index-class">
-        <h1>Cleric</h1>
-        <div><a href="cleric.html" target="_blank"><img src="images/Class/UI_ClassOutline_Cleric.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Cleric</h1><a href="cleric.html" target="_blank"><img src="images/Class/UI_ClassOutline_Cleric.png" width="250rem" height="250rem"></a></div>
     </div>
-    <div class="index-class">
-        <h1>Confessor</h1>
-        <div><a href="confessor.html" target="_blank"><img src="images/Class/UI_ClassOutline_Confessor.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Confessor</h1><a href="confessor.html" target="_blank"><img src="images/Class/UI_ClassOutline_Confessor.png" width="250rem" height="250rem"></a></div>
     </div>
-    <div class="index-class">
-        <h1>Druid</h1>
-        <div><a href="druid.html" target="_blank"><img src="images/Class/UI_ClassOutline_Druid.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Druid</h1><a href="druid.html" target="_blank"><img src="images/Class/UI_ClassOutline_Druid.png" width="250rem" height="250rem"></a></div>
     </div>
-    <div class="index-class">
-        <h1>Duelist</h1>
-        <div><a href="duelist.html" target="_blank"><img src="images/Class/UI_ClassOutline_Duelist.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Duelist</h1><a href="duelist.html" target="_blank"><img src="images/Class/UI_ClassOutline_Duelist.png" width="250rem" height="250rem"></a></div>
     </div>
-    <div class="index-class">
-        <h1>Frostweaver</h1>
-        <div><a href="frosweaver.html" target="_blank"><img src="images/Class/UI_ClassOutline_Frostweaver.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Frostweaver</h1><a href="frostweaver.html" target="_blank"><img src="images/Class/UI_ClassOutline_Frostweaver.png" width="250rem" height="250rem"></a></div>
     </div>
-    <div class="index-class">
-        <h1>Knight</h1>
-        <div><a href="knight.html" target="_blank"><img src="images/Class/UI_ClassOutline_Knight.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Knight</h1><a href="knight.html" target="_blank"><img src="images/Class/UI_ClassOutline_Knight.png" width="250rem" height="250rem"></a></div>
     </div>
-    <div class="index-class">
-        <h1>Myrmidon</h1>
-        <div><a href="myrmidon.html" target="_blank"><img src="images/Class/UI_ClassOutline_Myrmidon.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Myrmidon</h1><a href="myrmidon.html" target="_blank"><img src="images/Class/UI_ClassOutline_Myrmidon.png" width="250rem" height="250rem"></a></div>
     </div>
-    <div class="index-class">
-        <h1>Ranger</h1>
-        <div><a href="ranger.html" target="_blank"><img src="images/Class/UI_ClassOutline_Ranger.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Ranger</h1><a href="ranger.html" target="_blank"><img src="images/Class/UI_ClassOutline_Ranger.png" width="250rem" height="250rem"></a></div>
     </div>
-    <div class="index-class">
-        <h1>Templar</h1>
-        <div><a href="templar.html" target="_blank"><img src="images/Class/UI_ClassOutline_Templar.png"></a></div>
+    <div class="class-icon">        
+        <div><h1>Templar</h1><a href="templar.html" target="_blank"><img src="images/Class/UI_ClassOutline_Templar.png" width="250rem" height="250rem"></a></div>
     </div>        
 </body>
 </html>
